2001-02-24 18:10 UTC+0300 Alex Shashkov <shashkov@ostu.ru>
   * harbour/source/rtl/console.c
     ! Fixed bug STDOUT(..,"",..) on Watcom C 11.0

   * harbour/source/pp/ppcore.c
   * harbour/source/pp/pragma.c
     ! Fixed extern declaration for Watcom C 11.0

2001-02-24 12:45 UTC+0300 Alex Shashkov <shashkov@ostu.ru>
   * harbour/source/vm/dynsym.c
     ! Fixed
   * harbour/include/hbrddcdx.h
     + Added support ORDSETFOCUS() and update keys
   * harbour/source/rdd/dbfcdx1.c
     + Added support ORDSETFOCUS(), update keys, keys any type
     - remove hb_cdxltoa()
   * harbour/source/rdd/dbfcdx1.h
     ! Fixed support for Watcom C 11.0
     + Added support keys any type
   * harbour/source/rdd/dbfcdx2.h
     + Added some new functions
     * Changed the declaration of some functions

   Not finished yet.

2001-02-23 17:20 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/vm/hvm.c
     ! Added logic to clear items of extraneous parameters in hb_vmFrame().

2001-02-23 21:40 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/source/rdd/dbfntx/dbfntx1.c
     * bug fixed, reported by Maurilio Longo

2001-02-23 21:40 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/source/rdd/dbfntx/dbfntx1.c
     * building of indexes optimized

2001-02-13 hh:mm GMT+1 Jose Gimenez (JFG) <jfgimenez@wanadoo.es>
  * source/rtl/filesys.c
    * hb_fsOpen
    * hb_fsCreate
    * hb_fsClose
    * hb_fsRead
    * hb_fsWrite
    * hb_fsReadLarge
    * hb_fsWriteLarge
    * hb_fsSeek
    * hb_fsTell
    + added logic to use Win32 API calls

  * tests/files.prg
    * tested up to 20,000 DBF files

2001-02-23 19:35 UTC+0300 Alex Shashkov <shashkov@ostu.ru>
   * harbour/source/rtl/filesys.c
   * harbour/source/rtl/math.c
   * harbour/source/vm/item.c
     ! Fixed support for Watcom C 11.0

2001-02-23 08:25 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     + Added support for DO <>.prg

   * contrib/dot/rp_dot.ch